--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -242,7 +242,7 @@ iframe {
 
 .container-login100 {
   width: 100%;  
-  min-height: 100vh;
+  height: 92.9vh;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -252,12 +252,11 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
-
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   position: relative;
-  z-index: 1;  
+  z-index: 1;
 }
 
 .container-login100::before {
@@ -808,4 +807,8 @@ label {
     visibility: visible;
     opacity: 1;
   }
+}
+
+.body {
+  overflow: hidden;
 }
