--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -28,7 +28,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 <!--===============================================================================================-->
 </head>
-<body>
+<body class="body">
 	
 	<div class="limiter">
 		<div class="topnav">
