--- a/testApp/templates/indexLogged.html
+++ b/testApp/templates/indexLogged.html
@@ -30,7 +30,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/modelEdit.css' %}">
 <!--===============================================================================================-->
 </head>
-<body>
+<body class="body"> 
 	
 	<div class="limiter">
 		<div class="topnav">
