--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -13,16 +13,11 @@
         <div class="flex-horiz">
             <div id="modelEditDiv"style="width: 800px; height: 800px; overflow: hidden">
                 <canvas id="modelEditCanvas" height="10000" width="800" ></canvas>
-                <a href="{% url 'moduleEdit' model=1 module=2 %}" id="new-reaction">
-                    <button>
-                        Create New Reaction
-                    </button>
-                </a>
             </div>
+            <!-- Create New Reaction button created here with id="new-reaction" -->
             <div class="flex-sliders" id="slider-holder">
                 <h3 style="padding:10px 20px">Variables</h3>
             </div>
-        </div>
         </div>
     </form>
 	<div id="dropDownSelect1"></div>
