--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -71,7 +71,7 @@ Landing Page CSS
 }
 
 body, html {
-	height: 100%;
+	height: 100vh;
   font-family: Poppins-Regular, sans-serif;
   color: white;
 }
