--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -71,7 +71,7 @@ Landing Page CSS
 }
 
 body, html {
-	height: 100vh;
+	height: 100%;
   font-family: Poppins-Regular, sans-serif;
   color: white;
 }
@@ -242,7 +242,7 @@ iframe {
 
 .container-login100 {
   width: 100%;  
-  height: 92.9vh;
+  height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
