--- a/testApp/static/css/modelEdit.css
+++ b/testApp/static/css/modelEdit.css
@@ -1,7 +1,3 @@
-
-
-
-
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
@@ -150,32 +146,34 @@ iframe {
     color: #e5e5e5;
     line-height: 1.5;
 }
-    
 
-.wrap-login100 {
-    width: 1200px;
-    border-radius: 10px;
-    overflow: hidden;
-    padding: 100px;
-    background: #19384A;
-    background: -webkit-linear-gradient(top, #19384A, #347787);
-    background: -o-linear-gradient(top, #19384A, #347787);
-    background: -moz-linear-gradient(top, #19384A, #347787);
-    background: linear-gradient(top, #19384A, #347787);
-    align-content:center;
-
+#new-reaction {
+    border: 1px solid white;
+    background-color: #4CAF50; /* Green */
+    height: 57.8px;
+    margin-top: 3%;
+    color: white;
+    width: 14%;
+    padding: 1.2% 1.2% 1.2% 1.2%;
+    text-align: center;
+    line-height: 50%;
+    text-decoration: none;
+    float: right;
+    margin-left: 1%;
+    font-size: 14px;
+    margin-right: 1%;
 }
 
 .flex-horiz {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     min-width: 1000px;
 }
 
 .flex-sliders {
     display: flex;
     flex-direction: column;
+    float: left;
 }
 
 .variable-holder {
@@ -185,6 +183,7 @@ iframe {
 
 .inner-flex-horiz {
     display: flex;
+    float: left;
     flex-direction: row;
 }
 
@@ -196,42 +195,6 @@ iframe {
 /*------------------------------------------------------------------
 [ Form ]*/
 
-.login100-form {
-    width: 100%;
-    justify-content:center;
-}
-
-.login100-form-title {
-    font-family: Poppins-Medium;
-    font-size: 30px;
-    color: #fff;
-    line-height: 1.2;
-    text-align: center;
-    text-transform: uppercase;
-    display: block;
-}
-
-
-
-
-.editToolbar {
-    width: 800px;
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between;
-    padding: 0px 10px;
-}
-
-.innerToolbar {
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between;
-}
-
-.editToolbarButton {
-    color: white;
-    padding: 10px;
-}
 
 #modelEditCanvas {
     background-color: white;
@@ -242,13 +205,6 @@ iframe {
 
 
 @media (max-width: 1200px) {
-    .wrap-login100 {
-        width: 95%;
-    }
-
-    .editToolbar {
-        width: 90%;
-    }
 
     .flex-horiz {
         min-width: 100%;
@@ -256,18 +212,5 @@ iframe {
 
     #modelEditCanvas {
         width: 90%;
-    }
-}
-@media (max-width: 992px) {
-    .alert-validate::before {
-        visibility: visible;
-        opacity: 1;
-    }
-}
-
-
-@media (max-width: 576px) {
-    .wrap-login100 {
-        padding: 55px 15px 37px 15px;
     }
 }
