--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -22,7 +22,9 @@
             <div class="modelButtons">
                 <button type="button" class="play-pause" id="">Play/Pause</button>
                 <button type="button" class="play-pause" id="new-reaction">Create New Reaction</button>
-                <button type="button" class="play-pause" id="backButtonModelEdit">Back</button>
+                <a href="/testApp/modelChoice">
+                    <button type="button" class="play-pause" id="backButtonModelEdit">Back</button>
+                </a>
             </div>
         </div>
     </form>
