--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -288,9 +288,10 @@ iframe {
 }
 
 .username {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-top: 1%;
+  margin-right: 1%;
+  font-size: 18px;
+  color: #EEEEEE;
 }
 
 #username {
@@ -314,7 +315,6 @@ iframe {
 }
 
 .modelChoice-scroll-elements {
-  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -409,12 +409,11 @@ label {
 
 .web-title{
   color: #EEEEEE;
+  position: absolute;
   font-size: 33px;
-  display: inline-block;
   font-family: 'Courier', Courier, monospace;
   font-weight: 500;
-  margin-left: -25px;
-  
+  margin-left: 46.8%;
 }
 
 .landing-page-sub-width {
@@ -429,11 +428,13 @@ label {
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
-  display: inline-block;
+  
+  position: absolute;
   width: 90px;
   height: 50px;
-  margin-left: 82px;
-  margin-top: -9px;
+  margin-left: 42%;
+
+  margin-top: 5px;
   border-radius: 3px;
 }
 
