--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -7,17 +7,17 @@
 
 @font-face {
   font-family: Poppins-Regular;
-  src: url('../fonts/poppins/Poppins-Regular.ttf'); 
+  src: url('../fonts/poppins/Poppins-Regular.ttf');
 }
 
 @font-face {
   font-family: Poppins-Medium;
-  src: url('../fonts/poppins/Poppins-Medium.ttf'); 
+  src: url('../fonts/poppins/Poppins-Medium.ttf');
 }
 
 @font-face {
   font-family: Poppins-Bold;
-  src: url('../fonts/poppins/Poppins-Bold.ttf'); 
+  src: url('../fonts/poppins/Poppins-Bold.ttf');
 }
 
 @font-face {
@@ -31,7 +31,7 @@ Landing Page CSS
 .landing-page {
   display: inline-block;
   text-align: center;
-  width: 100%;  
+  width: 100%;
   min-height: 88vh;
   background: rgb(51, 51, 60); /* Fallback for older browsers without RGBA-support */
   background: rgba(51, 51, 60, 0.4);
@@ -41,7 +41,7 @@ Landing Page CSS
 .inner-landing-page {
   opacity: 1.6;
   display: inline-block;
-  
+
 
 }
 
@@ -51,7 +51,7 @@ Landing Page CSS
   height: 200px;
   margin-top: 100px;
   border-radius: 5px;
-  
+
 }
 
 .landing-page-text {
@@ -65,14 +65,16 @@ Landing Page CSS
 [ RESTYLE TAG ]*/
 
 * {
-	margin: 0px; 
-	padding: 0px; 
+	margin: 0px;
+	padding: 0px;
 	box-sizing: border-box;
 }
 
 body, html {
 	height: 100%;
   font-family: Poppins-Regular, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
   color: white;
 }
 
@@ -81,7 +83,7 @@ a {
 	font-family: Poppins-Regular;
 	font-size: 14px;
 	line-height: 1.7;
-	color: #666666;
+	color: #000000;
 	margin: 0px;
 	transition: all 0.4s;
 	-webkit-transition: all 0.4s;
@@ -225,8 +227,8 @@ iframe {
   margin-left: 70px;
   margin-top: 25px;
 }
-/*---------------------------------------------*/ 
-/*sign-up*/ 
+/*---------------------------------------------*/
+/*sign-up*/
 .sign-up-spacing {
   margin-top: 10px;
 
@@ -241,7 +243,7 @@ iframe {
 }
 
 .container-login100 {
-  width: 100%;  
+  width: 100%;
   height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -318,9 +320,9 @@ iframe {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-y: scroll; 
+  overflow-y: scroll;
   width: 100%;
-  
+
 }
 
 .modelChoice-spacing {
@@ -350,7 +352,7 @@ iframe {
 }
 
 label {
-  color: white;
+  color: black;
 }
 
 .login-flex {
@@ -428,7 +430,7 @@ label {
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
-  
+
   position: absolute;
   width: 90px;
   height: 50px;
@@ -507,7 +509,7 @@ label {
 
 
 
-/*---------------------------------------------*/ 
+/*---------------------------------------------*/
 .focus-input100 {
   position: absolute;
   display: block;
@@ -656,7 +658,7 @@ label {
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
-  
+
 }
 
 .login100-form-btn {
@@ -721,6 +723,7 @@ label {
 
 .title-model {
   margin-bottom: 20px;
+  color: white;
 }
 
 /*------------------------------------------------------------------
@@ -810,5 +813,5 @@ label {
 
 .body {
   overflow: auto;
-  
+
 }
