--- a/testApp/static/css/moduleEdit.css
+++ b/testApp/static/css/moduleEdit.css
@@ -38,7 +38,8 @@ button {
   height: 170px;
   border: 5px;
   border-style: solid;
-  border-color: rgba(255,255,255,0.9);
+  border-color: rgba(255,255,255, 0.9);
+  background-color: rgba(255, 255, 255, 0.6);
   display: inline-block;
   overflow: hidden;
 }
@@ -49,7 +50,7 @@ button {
   margin-left: 1%;
   border-bottom: 2px solid;
   border-bottom-color: black;
-  
+
 }
 .subs, .enzs, .prods {
     width: 100%;
@@ -88,7 +89,7 @@ ul#substrates{
   color: rgb(25,25,25);
   display: block;
   padding: .5% 1% 0 0;
-  
+
 }
 
 .reversibleChoice {
@@ -120,15 +121,15 @@ ul#substrates{
     margin-left: 1%;
     font-size: 14px;
     margin-right: 1%;
-    
-    
+
+
 }
 .saveModuleForm {
     float: left;
     padding-left: 15px;
     height: 550px;
     width: 34.85%;
-    
+
 }
 
 .saveReaction {
@@ -158,7 +159,7 @@ ul#substrates{
     text-decoration: none;
     display: inline-block;
     font-size: 14px;
-    
+
 }
 
 .createReaction, .clearReaction{
