--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -15,7 +15,7 @@
                 <canvas id="modelEditCanvas" height="10000" width="800" ></canvas>
             </div>
             <div class="flex-sliders" id="slider-holder">
-                <h3 style="padding:10px 20px">Variables</h3>
+                <h3 class="varLabel">Variables</h3>
             </div>
             <!-- Create New Reaction button created here with id="new-reaction" -->
             <div class="modelButtons">
@@ -27,9 +27,9 @@
             </div>
         </div>
     </form>
-    
+
     <script src="{% static 'js/modelEdit.js' %}"></script>
-    
+
 </body>
 </html>
 {% endblock %}
