--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -43,6 +43,9 @@
 				allModules.push(['{{ mod.enzyme }}', '{{mod.reversible}}', '{{mod.enzymeAbbr}}', '{{mod.id}}']);
 		{% endfor %}
 
+		var xCoor = '{{xCoor}}';
+		var yCoor = '{{yCoor}}';
+
 		var isPublic = false;
 		isPublic = '{{isPublic}}';
 
