--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -176,7 +176,7 @@
 												<input type="radio" name="reversibleChoice" onchange="onRadioReverseChange()" value="Irreversible" checked>
 												<span class="checkmark"></span>
 											</label>
-											<button type="submit" class="saveReaction" id="saveReaction">CHECK</button>
+											<button type="submit" class="saveReaction" id="saveReaction">SAVE</button>
 										</form>
 										</div>
 											<button type="button" class="createReaction" id="createReaction">CREATE REACTION</button>
