--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -201,8 +201,10 @@
 										  </div>
 										</div>
 										<div id="snackbar">This is a valid reaction, but not the next reaction in the pathway.</div>
-										<div id="snackbarHelp">If you get stumped, select only the enzyme, hit "create reaction" and we'll fill in the rest</<div>
+										<div id="snackbarHelp">If you get stumped, select only the enzyme, hit "create reaction" and we'll fill in the rest</div>
+										<div id="snackbarSaveBtn">You must create a reaction before saving.</div>
 
+										</div>
 										</div>
 
 	<script src="{% static 'js/moduleEdit.js' %}"></script>
