--- a/testApp/templates/indexLogged.html
+++ b/testApp/templates/indexLogged.html
@@ -44,7 +44,7 @@
 			
 			<p class="username" id="username">User: {{ user.get_username }}</a>
 			
-			<a href="{% url 'logout_view' %}" id="topnav-buttons" class="login100-form-btn"><button type="button">
+			<a href="{% url 'logout_view' %}" id="topnav-logout-button" class="login100-form-btn"><button type="button">
 				Log Out
 			</button></a>
 
