--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -185,8 +185,14 @@ iframe {
 #topnav-buttons {
   float: right;
   height: 36px;
+}
+
+#topnav-logout-button {
+  float: right;
+  height: 36px;
   margin-top: -1%;
 }
+
 
 /* Style the links inside the navigation bar */
 .topnav a {
