Add forgot password

--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -193,6 +193,18 @@ iframe {
   margin-top: -1%;
 }
 
+.forgot-password {
+  color: #333333;
+  margin-top: 2%;
+  margin-left: 6.5%;
+  font-size: 14px;
+}
+
+.forgot-password:hover {
+  color: white;
+  
+}
+
 
 /* Style the links inside the navigation bar */
 .topnav a {
@@ -363,11 +375,12 @@ label {
 }
 
 .login-flex {
-  margin-top: 140px;
+  margin-top: 9%;
+  margin-left: 3.9%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-width: 100%;
+  position: fixed;
   align-items: center;
 }
 
