--- a/testApp/templates/registration/login.html
+++ b/testApp/templates/registration/login.html
@@ -6,6 +6,7 @@
     <form class="login100-form" method="post">
         {% csrf_token %}
         {{ form.as_p }}
+        <button class="forgot-password">Forgot Password? Click here to reset</button>
         <div class="login-flex">
             <button type="submit" class="login100-form-btn">Login</button>
         </div>
