Play/Pause functionality

--- a/testApp/static/css/modelEdit.css
+++ b/testApp/static/css/modelEdit.css
@@ -227,7 +227,7 @@ iframe {
 
 #modelEditCanvas {
     background-color: white;
-    border-radius: 10px;
+    opacity: 0.85;
 }
 /*------------------------------------------------------------------
 [ Responsive ]*/
