--- a/testApp/templates/indexLogged.html
+++ b/testApp/templates/indexLogged.html
@@ -34,10 +34,9 @@
 	
 	<div class="limiter">
 		<div class="topnav">
-			<a class="active" href="/testApp/home">
+			<a class="active" href="/testApp/modelChoice">
 				<img src="{% static 'images/home-icon-white.png' %}" class="wrap-home-top-bar">
 			</a>
-			<a href="#news">Settings</a>
 			<a href="#contact">Help</a>
 			<img src="{% static 'images/BioPath3.png' %}" class="wrap-biopath-logo-top-bar">
 			<p class="web-title">BioPath</p>
