Model edit ui changes

--- a/testApp/static/css/modelEdit.css
+++ b/testApp/static/css/modelEdit.css
@@ -175,7 +175,7 @@ iframe {
 .modelButtons {
     display: flex;
     flex-flow: column;
-    height: 720px;
+    height: 650px;
     margin: 0px 20px 0px 20px;
 }
 
@@ -183,13 +183,14 @@ iframe {
     display: flex;
     flex-direction: row;
     min-width: 1000px;
+    min-height: 660px;
 }
 
 .flex-sliders {
     display: flex;
     flex-direction: column;
     float: left;
-    height: 720px;
+    height: 630px;
     margin: 20px 0px 20px 30px;
     background-color: rgba(255,255,255,0.5);
     border: 5px;
