updating url usage

--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -10,9 +10,11 @@
         {{ substrates|json_script:"db-substrates" }}
         {{ products|json_script:"db-products" }}
         {{ model_num|json_script:"modelNum"}}
+        {{ xCoorNext|json_script:"x-coor-next" }}
+        {{ yCoorNext|json_script:"y-coor-next" }}
         <div class="flex-horiz">
-            <div id="modelEditDiv"style="width: 800px; height: 650px; overflow-y: scroll">
-                <canvas id="modelEditCanvas" height="650" width="800" ></canvas>
+            <div id="modelEditDiv"style="width: 800px; height: 800px; overflow-y: scroll">
+                <canvas id="modelEditCanvas" height="10000" width="800" ></canvas>
             </div>
             <div class="flex-sliders" id="slider-holder">
                 <h3 class="varLabel">Variables</h3>
