--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -413,6 +413,13 @@ label {
   margin-right: 5px;
 }
 
+.login100-form-modelEdit {
+  width: 100%;
+  margin-top: 0px;
+  margin-left: 10px;
+  
+}
+
 .wrap-biopath-logo {
   font-size: 60px;
   color: #333333;
