--- a/testApp/static/css/modelEdit.css
+++ b/testApp/static/css/modelEdit.css
@@ -176,7 +176,8 @@ iframe {
     display: flex;
     flex-flow: column;
     height: 650px;
-    margin: 0px 20px 0px 20px;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .flex-horiz {
@@ -190,7 +191,7 @@ iframe {
     display: flex;
     flex-direction: column;
     float: left;
-    height: 630px;
+    height: 650px;
     margin-left: 1%;
     background-color: rgba(255,255,255,0.5);
     border: 5px;
@@ -201,7 +202,7 @@ iframe {
 }
 
 .varLabel{
-  padding: 0px 0px 0px 10px;
+  padding: 5px 0px 0px 10px;
 }
 .variable-holder {
     padding: 10px 20px;
