--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -5,7 +5,7 @@
 
 </head>
 <body>
-	<form class="login100-form validate-form">
+	<form class="login100-form-modelEdit validate-form">
         {{ modules|json_script:"db-modules" }}
         {{ substrates|json_script:"db-substrates" }}
         {{ products|json_script:"db-products" }}
