--- a/testApp/static/css/modelEdit.css
+++ b/testApp/static/css/modelEdit.css
@@ -197,8 +197,12 @@ iframe {
     border: 5px;
     border-style: solid;
     border-color: rgba(255,255,255, 0.9);
-    border-radius: 5%;
+    border-radius: 1%;
     overflow-y: scroll;
+}
+
+#slider-holder {
+    width: 389.84px;
 }
 
 .varLabel{
